--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<!-- Import af google font!-->
+	<link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>
+
 	<title>Gøglershop A.M.B.A</title>
 </head>
 <body>
