Mandag formiddag: Menu, beuatfifying, add products

--- a/cykler.html
+++ b/cykler.html
@@ -32,9 +32,56 @@
 			</ul> 
 		</div>
 		<div id="content">
-			<img src="images/forside-billede.jpg">
+			<table border="2">
+				<tr>
+				<th>Billede</th>
+				<th>Navn</th>
+				<th>Beskrivelse</th>
+				<th>Pris</th>
+				<th>Køb</th>
 
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut pellentesque orci. Aliquam condimentum elit eget nisl ornare tristique. Duis ac libero a augue varius pulvinar. Quisque ornare nisl posuere rutrum consequat. Proin faucibus in libero id dapibus. Aliquam ornare volutpat felis, sed congue eros mattis id. Vestibulum eleifend augue nec vestibulum euismod. Mauris a tortor interdum, vulputate nisi eu, viverra nulla. Nunc eu euismod urna, non euismod dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin posuere ante sed mauris hendrerit dignissim. Integer lacinia nisi et velit mattis ultricies. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vehicula pretium ante, in pretium diam dignissim at.
+
+			</tr>
+				<tr>
+					<td><img src="images/cykler/1.jpg"></td>
+					<td>Uno-wheel-pro</td>
+					<td>Dette er de ethjulede cyklers Lamboghini</td>
+					<td>Over 9000!</td>
+					<td>~knap~</td>
+				</tr>
+
+				<tr>
+					<td><img src="images/cykler/2.jpg"></td>
+					<td>Uno-wheel-pro</td>
+					<td>GAy!</td>
+					<td>Under 9000?</td>
+					<td>~knap~</td>
+				</tr>
+
+				<tr>
+					<td><img src="images/cykler/3.jpg"></td>
+					<td>Uno-wheel-pro</td>
+					<td>Dette er de ethjulede cyklers Lamboghini</td>
+					<td>Over 9000!</td>
+					<td>~knap~</td>
+				</tr>
+
+				<tr>
+					<td><img src="images/cykler/4.jpg"></td>
+					<td>Uno-wheel-pro</td>
+					<td>Dette er de ethjulede cyklers Lamboghini</td>
+					<td>Over 9000!</td>
+					<td>~knap~</td>
+				</tr>
+
+				<tr>
+					<td><img src="images/cykler/5.jpg"></td>
+					<td>Uno-wheel-pro</td>
+					<td>Dette er de ethjulede cyklers Lamboghini</td>
+					<td>Over 9000!</td>
+					<td>~knap~</td>
+				</tr>
+			</table>
 		</div>
 
 	</div>
