Diablo og sminke DONE!

--- a/sminke.html
+++ b/sminke.html
@@ -32,9 +32,49 @@
 			</ul> 
 		</div>
 		<div id="content">
-			<img src="images/forside-billede.jpg">
-
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut pellentesque orci. Aliquam condimentum elit eget nisl ornare tristique. Duis ac libero a augue varius pulvinar. Quisque ornare nisl posuere rutrum consequat. Proin faucibus in libero id dapibus. Aliquam ornare volutpat felis, sed congue eros mattis id. Vestibulum eleifend augue nec vestibulum euismod. Mauris a tortor interdum, vulputate nisi eu, viverra nulla. Nunc eu euismod urna, non euismod dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin posuere ante sed mauris hendrerit dignissim. Integer lacinia nisi et velit mattis ultricies. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vehicula pretium ante, in pretium diam dignissim at.
+			<table border="2">
+				<tr>
+					<th>Billede</th>
+					<th>Navn</th>
+					<th>Beskrivelse</th>
+					<th>Pris</th>
+					<th>Køb</th>
+				</tr>
+				<tr>
+					<td><img src="images/sminke/s1.jpg"></td>
+					<td>Rød</td>
+					<td>Rød ansigtsmaling</td>
+					<td>29.99,-</td>
+					<td>~knap~</td>
+				</tr>
+				<tr>
+					<td><img src="images/sminke/s2.jpg"></td>
+					<td>Blå</td>
+					<td>Blå ansigtsmaling</td>
+					<td>29.99,-</td>
+					<td>~knap~</td>
+				</tr>
+				<tr>
+					<td><img src="images/sminke/s3.jpg"></td>
+					<td>Sort</td>
+					<td>Sort ansigtsmaling</td>
+					<td>29.99,-</td>
+					<td>~knap~</td>
+				</tr>
+				<tr>
+					<td><img src="images/sminke/s4.jpg"></td>
+					<td>Hvid</td>
+					<td>Hvid ansigtsmaling</td>
+					<td>29.99,-</td>
+					<td>~knap~</td>
+				</tr>
+				<tr>
+					<td><img src="images/sminke/s5.jpg"></td>
+					<td>Gul</td>
+					<td>Gul ansigtsmaling</td>
+					<td>29.99,-</td>
+					<td>~knap~</td>
+				</tr>
 		</div>
 
 	</div>
