--- a/diablo.html
+++ b/diablo.html
@@ -32,9 +32,49 @@
 			</ul> 
 		</div>
 		<div id="content">
-			<img src="images/forside-billede.jpg">
-
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut pellentesque orci. Aliquam condimentum elit eget nisl ornare tristique. Duis ac libero a augue varius pulvinar. Quisque ornare nisl posuere rutrum consequat. Proin faucibus in libero id dapibus. Aliquam ornare volutpat felis, sed congue eros mattis id. Vestibulum eleifend augue nec vestibulum euismod. Mauris a tortor interdum, vulputate nisi eu, viverra nulla. Nunc eu euismod urna, non euismod dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin posuere ante sed mauris hendrerit dignissim. Integer lacinia nisi et velit mattis ultricies. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vehicula pretium ante, in pretium diam dignissim at.
+			<table border="2">
+				<tr>
+					<th>Billede</th>
+					<th>Navn</th>
+					<th>Beskrivelse</th>
+					<th>Pris</th>
+					<th>Køb</th>
+				</tr>
+				<tr>
+					<td><img src="images/diablo/d1.jpg"></td>
+					<td>Pink-spin 9000</td>
+					<td>Bedst i test!</td>
+					<td>199,-</td>
+					<td>~knap~</td>
+				</tr>
+				<tr>
+					<td><img src="images/diablo/d2.jpg"></td>
+					<td>Red-blue twister</td>
+					<td>For brugere, der ønsker at mestre kunsten,<br> <em><strong>"The flying dragon"</strong></em></td></br>
+					<td>499,-</td>
+					<td>~knap~</td>
+				</tr>
+				<tr>
+					<td><img src="images/diablo/d3.jpg"></td>
+					<td>Rainbow deluxe</td>
+					<td>Beregnet til farverige samt spektakulære shows </td>
+					<td>299,-</td>
+					<td>~knap~</td>
+				</tr>
+				<tr>
+					<td><img src="images/diablo/d4.jpg"></td>
+					<td>Cool-blue</td>
+					<td>Den traditionelle, og mest anvendte diablo, siden tidernes morgen</td>
+					<td>399,-</td>
+					<td>~knap~</td>
+				</tr>
+				<tr>
+					<td><img src="images/diablo/d5.jpg"></td>
+					<td>Red-Dragon</td>
+					<td>En eksklusiv diablo, designet af de kinesiske munke i Beijing!</td>
+					<td>699,-</td>
+					<td>~knap~</td>
+				</tr>
 		</div>
 
 	</div>
