Added Kontakt page

--- a/kontakt.html
+++ b/kontakt.html
@@ -4,11 +4,12 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/kontakt.css">
 
 	<!-- Import af google font!-->
 	<link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>
 
-	<title>Gøglershop A.M.B.A</title>
+	<title>Kontakt os - Gøglershop A.M.B.A</title>
 </head>
 <body>
 	<div id="uberwrapper">
@@ -32,9 +33,26 @@
 			</ul> 
 		</div>
 		<div id="content">
-			<img src="images/forside-billede.jpg">
-
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut pellentesque orci. Aliquam condimentum elit eget nisl ornare tristique. Duis ac libero a augue varius pulvinar. Quisque ornare nisl posuere rutrum consequat. Proin faucibus in libero id dapibus. Aliquam ornare volutpat felis, sed congue eros mattis id. Vestibulum eleifend augue nec vestibulum euismod. Mauris a tortor interdum, vulputate nisi eu, viverra nulla. Nunc eu euismod urna, non euismod dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin posuere ante sed mauris hendrerit dignissim. Integer lacinia nisi et velit mattis ultricies. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vehicula pretium ante, in pretium diam dignissim at.
+			<table id="kontakt"> <tr>
+			<td id="kontakt-os">
+				<h1>Kontakt os</h1>
+				<p>
+				Gøglerforeningen A.M.B.A.<br>
+				Telefonsmøgen 8<br>
+				8000 Aarhus<br>
+				tlf.: 42421337<br>
+				<a href="mailto:Gøglershop@lortemail.dk">Gøglershop@lortemail.dk</a>
+				</p>
+			</td>
+			<td id="mail-form">
+				<form>
+					E-mail-addresse: <br><input type="email" name="email"><br>
+					Emne: <br><input type="text" name="emne"><br>
+					Besked: <br><textarea name="text" cols="40" rows="10"></textarea><br>
+					<button name="SEND">Send</button>
+				</form>
+			</td>
+			</tr> </table>
 		</div>
 
 	</div>
