erstattet 4. img med 6. stylet css for tables færdiggjort cykler.

--- a/cykler.html
+++ b/cykler.html
@@ -43,42 +43,42 @@
 
 			</tr>
 				<tr>
-					<td><img src="images/cykler/1.jpg"></td>
+					<td><img src="images/cykler/1.jpg" alt="This is a unicycle!"></td>
 					<td>Uno-wheel-pro</td>
-					<td>Dette er de ethjulede cyklers Lamboghini</td>
-					<td>Over 9000!</td>
+					<td>Dette er de ethjulede cyklers Lamboghini!</td>
+					<td>1800 jyske dollars!</td>
 					<td>~knap~</td>
 				</tr>
 
 				<tr>
-					<td><img src="images/cykler/2.jpg"></td>
+					<td><img src="images/cykler/2.jpg" alt="This is a unicycle!"></td>
 					<td>Uno-wheel-pro</td>
-					<td>GAy!</td>
-					<td>Under 9000?</td>
+					<td>Den er MØJ Hidsig!</td>
+					<td>kun 799,999999 jyske dollars!</td>
 					<td>~knap~</td>
 				</tr>
 
 				<tr>
-					<td><img src="images/cykler/3.jpg"></td>
-					<td>Uno-wheel-pro</td>
-					<td>Dette er de ethjulede cyklers Lamboghini</td>
-					<td>Over 9000!</td>
+					<td><img src="images/cykler/3.jpg" alt="This is a unicycle!"></td>
+					<td>Starter bike</td>
+					<td>Perfect for your avarage rookie!</td>
+					<td>500 jyske dollars</td>
 					<td>~knap~</td>
 				</tr>
 
 				<tr>
-					<td><img src="images/cykler/4.jpg"></td>
-					<td>Uno-wheel-pro</td>
-					<td>Dette er de ethjulede cyklers Lamboghini</td>
-					<td>Over 9000!</td>
+					<td><img src="images/cykler/4.jpg" alt="This is a unicycle!"></td>
+					<td>Super pro bike</td>
+					<td>KOM SÅ BJARNE!</td>
+					<td>9000 jyske dollars!</td>
 					<td>~knap~</td>
 				</tr>
 
 				<tr>
-					<td><img src="images/cykler/5.jpg"></td>
-					<td>Uno-wheel-pro</td>
-					<td>Dette er de ethjulede cyklers Lamboghini</td>
-					<td>Over 9000!</td>
+					<td><img src="images/cykler/5.jpg" alt="This is a unicycle!"></td>
+					<td>Brokeback student-bike</td>
+					<td>Til dem der ikke har råd til andet.</td>
+					<td>99,99 jyske dollars - det' billig'!</td>
 					<td>~knap~</td>
 				</tr>
 			</table>
