Table css, samt footer

--- a/diablo.html
+++ b/diablo.html
@@ -32,7 +32,7 @@
 			</ul> 
 		</div>
 		<div id="content">
-			<table border="2">
+			<table class="producttable">
 				<tr>
 					<th>Billede</th>
 					<th>Navn</th>
@@ -75,6 +75,7 @@
 					<td>699,-</td>
 					<td>~knap~</td>
 				</tr>
+			</table>
 		</div>
 
 	</div>
