--- a/cykler.html
+++ b/cykler.html
@@ -32,7 +32,7 @@
 			</ul> 
 		</div>
 		<div id="content">
-			<table border="2">
+			<table class="producttable">
 				<tr>
 				<th>Billede</th>
 				<th>Navn</th>
