--- a/kontakt.html
+++ b/kontakt.html
@@ -33,8 +33,8 @@
 			</ul> 
 		</div>
 		<div id="content">
-			<table id="kontakt"> <tr>
-			<td id="kontakt-os">
+		
+			<div id="kontakt-os" style="float:left; width:40%; padding-left: 10%;">
 				<h1>Kontakt os</h1>
 				<p>
 				Gøglerforeningen A.M.B.A.<br>
@@ -43,16 +43,16 @@
 				tlf.: 42421337<br>
 				<a href="mailto:Gøglershop@lortemail.dk">Gøglershop@lortemail.dk</a>
 				</p>
-			</td>
-			<td id="mail-form">
+			</div>
+			<div id="mail-form" style="float:right; width:50%">
 				<form>
 					E-mail-addresse: <br><input type="email" name="email"><br>
 					Emne: <br><input type="text" name="emne"><br>
 					Besked: <br><textarea name="text" cols="40" rows="10"></textarea><br>
 					<button name="SEND">Send</button>
 				</form>
-			</td>
-			</tr> </table>
+			</div>
+			
 		</div>
 
 	</div>
