--- a/cykler.html
+++ b/cykler.html
@@ -47,7 +47,7 @@
 					<td>Uno-wheel-pro</td>
 					<td>Dette er de ethjulede cyklers Lamboghini!</td>
 					<td>1800 jyske dollars!</td>
-					<td>~knap~</td>
+					<td><button type="button" href="#">Køb!</button></td>
 				</tr>
 
 				<tr>
@@ -55,7 +55,7 @@
 					<td>Uno-wheel-pro</td>
 					<td>Den er MØJ Hidsig!</td>
 					<td>kun 799,999999 jyske dollars!</td>
-					<td>~knap~</td>
+					<td><button type="button" href="#">Køb!</button></td>
 				</tr>
 
 				<tr>
@@ -63,7 +63,7 @@
 					<td>Starter bike</td>
 					<td>Perfect for your avarage rookie!</td>
 					<td>500 jyske dollars</td>
-					<td>~knap~</td>
+					<td><button type="button" href="#">Køb!</button></td>
 				</tr>
 
 				<tr>
@@ -71,7 +71,7 @@
 					<td>Super pro bike</td>
 					<td>KOM SÅ BJARNE!</td>
 					<td>9000 jyske dollars!</td>
-					<td>~knap~</td>
+					<td><button type="button" href="#">Køb!</button></td>
 				</tr>
 
 				<tr>
@@ -79,7 +79,7 @@
 					<td>Brokeback student-bike</td>
 					<td>Til dem der ikke har råd til andet.</td>
 					<td>99,99 jyske dollars - det' billig'!</td>
-					<td>~knap~</td>
+					<td><button type="button" href="#">Køb!</button></td>
 				</tr>
 			</table>
 		</div>
