--- a/kontakt.html
+++ b/kontakt.html
@@ -49,7 +49,7 @@
 					E-mail-addresse: <br><input type="email" name="email"><br>
 					Emne: <br><input type="text" name="emne"><br>
 					Besked: <br><textarea name="text" cols="40" rows="10"></textarea><br>
-					<button name="SEND">Send</button>
+					<input type="submit" name="SEND" value="Send">
 				</form>
 			</div>
 			
