--- a/kontakt.html
+++ b/kontakt.html
@@ -45,7 +45,7 @@
 				</p>
 			</div>
 			<div id="mail-form" style="float:right; width:50%">
-				<form>
+				<form action="#" method="post">
 					E-mail-addresse: <br><input type="email" name="email"><br>
 					Emne: <br><input type="text" name="emne"><br>
 					Besked: <br><textarea name="text" cols="40" rows="10"></textarea><br>
