Removed a stray "<" in diablo

--- a/diablo.html
+++ b/diablo.html
@@ -43,7 +43,7 @@
 				<tr>
 					<td><img src="images/diablo/d1.jpg"></td>
 					<td>Pink-spin 9000</td>
-					<td>Bedst i test!</td><
+					<td>Bedst i test!</td>
 					<td>199,-</td>
 					<td><button type="button" href="#" href="#">Køb!</button</td>
 				</tr>
