--- a/cykler.html
+++ b/cykler.html
@@ -44,7 +44,7 @@
 			</tr>
 				<tr>
 					<td><img src="images/cykler/1.jpg" alt="This is a unicycle!"></td>
-					<td>Uno-wheel-pro</td>
+					<td><b>Uno-wheel-superpro</b></td>
 					<td>Dette er de ethjulede cyklers Lamboghini!</td>
 					<td>1800 jyske dollars!</td>
 					<td><button type="button" href="#">Køb!</button></td>
@@ -52,7 +52,7 @@
 
 				<tr>
 					<td><img src="images/cykler/2.jpg" alt="This is a unicycle!"></td>
-					<td>Uno-wheel-pro</td>
+					<td><b>Uno-wheel-pro</b></td>
 					<td>Den er MØJ Hidsig!</td>
 					<td>kun 799,999999 jyske dollars!</td>
 					<td><button type="button" href="#">Køb!</button></td>
@@ -60,7 +60,7 @@
 
 				<tr>
 					<td><img src="images/cykler/3.jpg" alt="This is a unicycle!"></td>
-					<td>Starter bike</td>
+					<td><b>Starter bike</b></td>
 					<td>Perfect for your avarage rookie!</td>
 					<td>500 jyske dollars</td>
 					<td><button type="button" href="#">Køb!</button></td>
@@ -68,7 +68,7 @@
 
 				<tr>
 					<td><img src="images/cykler/4.jpg" alt="This is a unicycle!"></td>
-					<td>Super pro bike</td>
+					<td><b>Super pro bike</b></td>
 					<td>KOM SÅ BJARNE!</td>
 					<td>9000 jyske dollars!</td>
 					<td><button type="button" href="#">Køb!</button></td>
@@ -76,7 +76,7 @@
 
 				<tr>
 					<td><img src="images/cykler/5.jpg" alt="This is a unicycle!"></td>
-					<td>Brokeback student-bike</td>
+					<td><b>Brokeback student-bike</b></td>
 					<td>Til dem der ikke har råd til andet.</td>
 					<td>99,99 jyske dollars - det' billig'!</td>
 					<td><button type="button" href="#">Køb!</button></td>
