Ændret Font + sminke pics

--- a/kontakt.html
+++ b/kontakt.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/kontakt.css">
 
 	<!-- Import af google font!-->
-	<link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
 
 	<title>Kontakt os - Gøglershop A.M.B.A</title>
 </head>
