--- a/sminke.html
+++ b/sminke.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<!-- Import af google font!-->
-	<link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
 
 	<title>Gøglershop A.M.B.A</title>
 </head>
@@ -41,35 +41,35 @@
 					<th>Køb</th>
 				</tr>
 				<tr>
-					<td><img src="images/sminke/s1.jpg"></td>
+					<td><img src="images/sminke/s1.jpg" class="sminkepic" class="sminkepic"></td>
 					<td>Rød</td>
 					<td>Rød ansigtsmaling</td>
 					<td>29.99,-</td>
 					<td><button type="button" href="#" href="#">Køb!</button></td>
 				</tr>
 				<tr>
-					<td><img src="images/sminke/s2.jpg"></td>
+					<td><img src="images/sminke/s2.jpg" class="sminkepic"></td>
 					<td>Blå</td>
 					<td>Blå ansigtsmaling</td>
 					<td>29.99,-</td>
 					<td><button type="button" href="#" href="#">Køb!</button></td>
 				</tr>
 				<tr>
-					<td><img src="images/sminke/s3.jpg"></td>
+					<td><img src="images/sminke/s3.jpg" class="sminkepic"></td>
 					<td>Sort</td>
 					<td>Sort ansigtsmaling</td>
 					<td>29.99,-</td>
 					<td><button type="button" href="#">Køb!</button></td>
 				</tr>
 				<tr>
-					<td><img src="images/sminke/s4.jpg"></td>
+					<td><img src="images/sminke/s4.jpg" class="sminkepic"></td>
 					<td>Hvid</td>
 					<td>Hvid ansigtsmaling</td>
 					<td>29.99,-</td>
 					<td><button type="button" href="#">Køb!</button></td>
 				</tr>
 				<tr>
-					<td><img src="images/sminke/s5.jpg"></td>
+					<td><img src="images/sminke/s5.jpg" class="sminkepic"></td>
 					<td>Gul</td>
 					<td>Gul ansigtsmaling</td>
 					<td>29.99,-</td>
