--- a/cykler.html
+++ b/cykler.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<!-- Import af google font!-->
-	<link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
 
 	<title>Gøglershop A.M.B.A</title>
 </head>
