--- a/sminke.html
+++ b/sminke.html
@@ -45,35 +45,35 @@
 					<td>Rød</td>
 					<td>Rød ansigtsmaling</td>
 					<td>29.99,-</td>
-					<td><button type="button" href="#" href="#">Køb!</button></td>
+					<td><button type="button">Køb!</button></td>
 				</tr>
 				<tr>
 					<td><img src="images/sminke/s2.jpg" class="sminkepic"></td>
 					<td>Blå</td>
 					<td>Blå ansigtsmaling</td>
 					<td>29.99,-</td>
-					<td><button type="button" href="#" href="#">Køb!</button></td>
+					<td><button type="button">Køb!</button></td>
 				</tr>
 				<tr>
 					<td><img src="images/sminke/s3.jpg" class="sminkepic"></td>
 					<td>Sort</td>
 					<td>Sort ansigtsmaling</td>
 					<td>29.99,-</td>
-					<td><button type="button" href="#">Køb!</button></td>
+					<td><button type="button">Køb!</button></td>
 				</tr>
 				<tr>
 					<td><img src="images/sminke/s4.jpg" class="sminkepic"></td>
 					<td>Hvid</td>
 					<td>Hvid ansigtsmaling</td>
 					<td>29.99,-</td>
-					<td><button type="button" href="#">Køb!</button></td>
+					<td><button type="button">Køb!</button></td>
 				</tr>
 				<tr>
 					<td><img src="images/sminke/s5.jpg" class="sminkepic"></td>
 					<td>Gul</td>
 					<td>Gul ansigtsmaling</td>
 					<td>29.99,-</td>
-					<td><button type="button" href="#">Køb!</button></td>
+					<td><button type="button">Køb!</button></td>
 				</tr>
 			</table>
 		</div>
