--- a/diablo.html
+++ b/diablo.html
@@ -50,7 +50,7 @@
 				<tr>
 					<td><img src="images/diablo/d2.jpg" alt="En diablo!!"></td>
 					<td>Red-blue twister</td>
-					<td>For brugere, der ønsker at mestre kunsten,<br> <em><strong>"The flying dragon"</strong></em></td></br>
+					<td>For brugere, der ønsker at mestre kunsten,<br> <em><strong>"The flying dragon"</strong></em></td>
 					<td>499,-</td>
 					<td><button type="button">Køb!</button></td>
 				</tr>
