Changed html price.

--- a/cykler.html
+++ b/cykler.html
@@ -54,7 +54,7 @@
 					<td><img src="images/cykler/2.jpg" alt="This is a unicycle!"></td>
 					<td><b>Uno-wheel-pro</b></td>
 					<td>Den er MØJ Hidsig!</td>
-					<td>kun 799,999999 jyske dollars!</td>
+					<td>kun 799 jyske dollars!</td>
 					<td><button type="button">Køb!</button></td>
 				</tr>
 
@@ -77,8 +77,8 @@
 				<tr>
 					<td><img src="images/cykler/5.jpg" alt="This is a unicycle!"></td>
 					<td><b>Brokeback student-bike</b></td>
-					<td>Til dem der ikke har råd til andet.</td>
-					<td>99,99 jyske dollars - det' billig'!</td>
+					<td>Til dem der ikke har råd til andet</td>
+					<td>99 jyske dollars - det' billig'!</td>
 					<td><button type="button">Køb!</button></td>
 				</tr>
 			</table>
