--- a/TomcatServer/WebContent/login.xhtml
+++ b/TomcatServer/WebContent/login.xhtml
@@ -12,7 +12,7 @@
 	<h1>LOGIN</h1>
 	<h:form>
 		<h:inputText value="#{login.username}" />
-		<h:inputText value="#{login.password}" />
+		<h:inputSecret value="#{login.password}" />
 		<h:commandButton value="Login" action="#{login.login}"/>
 	</h:form>
 </h:body>
