--- a/TomcatServer/WebContent/create.xhtml
+++ b/TomcatServer/WebContent/create.xhtml
@@ -9,17 +9,17 @@
 	<h2>Change item</h2>
 	<h:form>
 		<b>Item-name </b>
-		<h:inputText value="#{ModifyBean.itemName}"/>
+		<h:inputText value="#{modifyBean.itemName}"/>
 		<br/><b>Item-price </b>
-		<h:inputText value="#{ModifyBean.itemPrice}"/>
+		<h:inputText value="#{modifyBean.itemPrice}"/>
 		<br/><b>Item-stock </b>
-		<h:inputText value="#{ModifyBean.itemStock}"/>
+		<h:inputText value="#{modifyBean.itemStock}"/>
 		<br/><b>Item-description </b>
-		<h:inputText value="#{ModifyBean.itemDes}"/>
+		<h:inputText value="#{modifyBean.itemDes}"/>
 		<br/><b>Item-URL </b>
-		<h:inputText value="#{ModifyBean.itemURL}"/>
+		<h:inputText value="#{modifyBean.itemURL}"/>
 
-		<h:commandButton action="#{ModifyBean.createItem}" value="Submit changes"/>
+		<h:commandButton action="#{modifyBean.createItem}" value="Submit changes"/>
 	</h:form>
 </body>
 </html>
