--- a/TomcatServer/WebContent/modify.xhtml
+++ b/TomcatServer/WebContent/modify.xhtml
@@ -9,19 +9,19 @@
 	<h2>Modify item</h2>
 	<h:form>
 		<b>Item-name </b>
-		<h:inputText value="#{ModifyBean.itemName}"/>
+		<h:inputText value="#{modifyBean.itemName}"/>
 		<br/><b>Item-price </b>
-		<h:inputText value="#{ModifyBean.itemPrice}"/>
+		<h:inputText value="#{modifyBean.itemPrice}"/>
 		<br/><b>Item-stock </b>
-		<h:inputText value="#{ModifyBean.itemStock}"/>
+		<h:inputText value="#{modifyBean.itemStock}"/>
 		<br/><b>Item-description </b>
-		<h:inputText value="#{ModifyBean.itemDes}"/>
+		<h:inputText value="#{modifyBean.itemDes}"/>
 		<br/><b>Item-URL </b>
-		<h:inputText value="#{ModifyBean.itemURL}"/>
+		<h:inputText value="#{modifyBean.itemURL}"/>
 		<br/><b>Item-ID </b>
-		<h:inputText readonly="true" value="#{ModifyBean.itemID}"/>
+		<h:inputText readonly="true" value="#{modifyBean.itemID}"/>
 		<br/>
-		<h:commandButton action="#{ModifyBean.modifyItem}" value="Submit changes"/>
+		<h:commandButton action="#{modifyBean.modifyItem}" value="Submit changes"/>
 	</h:form>
 </body>
 </html>
