--- a/TomcatServer/WebContent/adjustItemStock.xhtml
+++ b/TomcatServer/WebContent/adjustItemStock.xhtml
@@ -1,20 +1,20 @@
 <!Doctype html>
-<HTML xmlns="http://www.w3.org/1999/xhtml" 
+<html xmlns="http://www.w3.org/1999/xhtml" 
 		xmlns:h="http://java.sun.com/jsf/html">
-<HEAD>
-<META charset="UTF-8"/>
-<TITLE>Adjust the Item Stock</TITLE>
+<head>
+<meta charset="UTF-8"/>
+<title>Adjust the Item Stock</title>
 
-</HEAD>
-<BODY>
-	<H2>Adjust the Item Stock!!!</H2>
+</head>
+<body>
+	<h2>Adjust the Item Stock!!!</h2>
 	<h:form>
 		<br/><b>Item-stock </b>
 		<h:inputText value="#{modifyBean.itemStock}"/>
 		
 		<h:commandButton action="#{modifyBean.modifyItem}" value="Submit changes"/>
 	</h:form>
-</BODY>
+</body>
 
 
-</HTML>
+</html>
