--- a/TomcatServer/WebContent/create.xhtml
+++ b/TomcatServer/WebContent/create.xhtml
@@ -4,10 +4,10 @@
 <head>
 <meta charset="UTF-8" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
-<title>Create item</title>
+<title>Create a new item</title>
 </head>
 <body>
-	<h2>Change item</h2>
+	<h2>Create item</h2>
 	<h:form>
 		<b>Item-name </b>
 		<h:inputText value="#{modifyBean.itemName}"/>
