--- a/TomcatServer/WebContent/modify.xhtml
+++ b/TomcatServer/WebContent/modify.xhtml
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
-<title>Create item</title>
+<title> Modify an item</title>
 </head>
 <body>
 	<h2>Modify item</h2>
