Admin table updated

--- a/TomcatServer/WebContent/admin.xhtml
+++ b/TomcatServer/WebContent/admin.xhtml
@@ -37,7 +37,7 @@
 
 			<f:facet name="header">Description</f:facet>
 		
-			#{o.description}
+			<h:outputText value="#{o.description}" escape="false"></h:outputText>
 		</h:column>
 
 		<h:column>
