--- a/TomcatServer/WebContent/admin/modify.xhtml
+++ b/TomcatServer/WebContent/admin/modify.xhtml
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" 
-		xmlns:h="http://java.sun.com/jsf/html"> 
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"> 
 <head>
 <meta charset="UTF-8" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -8,20 +10,30 @@
 </head>
 <body>
 	<h2>Modify item</h2>
+
+	<f:metadata>
+		<f:viewParam name="itemID" value="#{modify.itemID}" />
+		<f:viewParam name="itemName" value="#{modify.itemName}" />
+		<f:viewParam name="itemPrice" value="#{modify.itemPrice}" />
+		<f:viewParam name="itemDes" value="#{modify.itemDes}" />
+		<f:viewParam name="itemURL" value="#{modify.itemURL}" />
+	</f:metadata>
+
 	<h:form>
+		
 		<b>Item-name </b>
-		<h:inputText value="#{modifyBean.itemName}"/>
+		<h:inputText value="#{modify.itemName}"/>
 		<br/><b>Item-price </b>
-		<h:inputText value="#{modifyBean.itemPrice}"/>
+		<h:inputText value="#{modify.itemPrice}"/>
 
 		<br/><b>Item-description </b>
-		<h:inputText value="#{modifyBean.itemDes}"/>
+		<h:inputTextarea value="#{modify.itemDes}" cols="25" rows="10"/>
 		<br/><b>Item-URL </b>
-		<h:inputText value="#{modifyBean.itemURL}"/>
+		<h:inputText value="#{modify.itemURL}"/>
 		<br/><b>Item-ID </b>
-		<h:inputText readonly="true" value="#{modifyBean.itemID}"/>
+		<h:inputText readonly="true" value="#{modify.itemID}"/>
 		<br/>
-		<h:commandButton action="#{modifyBean.modifyItem}" value="Submit changes"/>
+		<h:commandButton action="#{modify.modifyItem}" value="Submit changes"/>
 	</h:form>
 </body>
 </html>
