--- a/TomcatServer/WebContent/admin/adjustItemStock.xhtml
+++ b/TomcatServer/WebContent/admin/adjustItemStock.xhtml
@@ -13,7 +13,7 @@
 
 	<f:metadata>
 	<f:viewParam name="itemID" value="#{modify.itemID}" />
-	<f:viewParam name="itemStock" value="#{modify.itemStock}" />
+	<f:viewParam name="itemStock" value="#{modify.oldItemStock}" />
 	</f:metadata>
 
 	<h:form>
