--- a/TomcatServer/WebContent/admin/admin.xhtml
+++ b/TomcatServer/WebContent/admin/admin.xhtml
@@ -5,12 +5,13 @@
 	xmlns:c="http://java.sun.com/jstl/core"
 	xmlns:h="http://java.sun.com/jsf/html">
 <head>
+<link rel="stylesheet" type="text/css" href="../css/backend.css" />
 <title>Admin panel</title>
 </head>
 <body>
 
 
-	<h:dataTable var="o" value="#{panelBean.items}" border="1">
+	<h:dataTable var="o" value="#{panelBean.items}">
 
 
 		<h:column>
