--- a/TomcatServer/WebContent/admin/admin.xhtml
+++ b/TomcatServer/WebContent/admin/admin.xhtml
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<a href="create.jsf"> Create new item </a>
+<a href="create.jsf" id="createlink"> Create new item </a>
 
 	<h:dataTable var="o" value="#{panelBean.items}">
 
