--- a/TomcatServer/WebContent/shop.html
+++ b/TomcatServer/WebContent/shop.html
@@ -5,6 +5,7 @@
 		<script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
 		<script type="text/javascript" src="js/template.js"></script>
 		<script type="text/javascript" src="js/login.js"></script>
+		<script type="text/javascript" src="js/basket.js"></script>
 	</head>
 	<body>
 		<form action="#" method="post">
@@ -14,5 +15,9 @@
 			<input type="button" name="create" value="Create new user" id="create">
 			<label id="loginResponse"></label>
 		</form>
+		
+		
+		<button onclick="test()">HRELLOEW</button>
+		
 	</body>
 </html>
