--- a/TomcatServer/WebContent/shop.html
+++ b/TomcatServer/WebContent/shop.html
@@ -10,7 +10,7 @@
 	<body>
 		<form action="#" method="post">
 			<input type="text" name="username" value="" id="username">
-			<input type="text" name="password" value="" id="password">
+			<input type="password" name="password" value="" id="password">
 			<input type="button" name="login" value="Login" id="login">
 			<input type="button" name="create" value="Create new user" id="create">
 			<label id="loginResponse"></label>
