en del rettelser for at lave description - virker stadig ikke - vi skal have fjernet namespacet

--- a/TomcatServer/WebContent/testShop.html
+++ b/TomcatServer/WebContent/testShop.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<link rel="stylesheet" type="text/css" href="css/backend.css" />
 		<title>G$glershop</title>
 		<script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
 		<script type="text/javascript" src="js/template.js"></script>
