Added baasket functionality and sausage

--- a/TomcatServer/WebContent/shop.html
+++ b/TomcatServer/WebContent/shop.html
@@ -17,7 +17,13 @@
 		</form>
 		
 		
-		<button onclick="test()">HRELLOEW</button>
+		<button onclick="add_to_basket('3169', '5')">HRELLOEW</button>
+		<button onclick="add_to_basket('3062', '10')">HRELLOEW</button>
+		<button onclick="add_to_basket('3177', '20')">HRELLOEW</button>
+		<button onclick="add_to_basket('3170', '15')">HRELLOEW</button>
+		<button onclick="empty_basket()">BUY BUY BUY</button>
+		<button onclick="buy_item('3169', '5')">BUY BUY BUY ITEM</button>
+		
 		
 	</body>
 </html>
