Smårettelser - mangler stadig at have en ordentlig description

--- a/TomcatServer/WebContent/testShop.html
+++ b/TomcatServer/WebContent/testShop.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript" src="js/shopService.js"></script>
 	</head>
 	<body>
-		<button id="update" type="button">update</button>
+		<button id="buy" type="button">Buy</button>
 		
 		<table id="itemTableBody"></table>
 	</body>
