--- a/TomcatServer/WebContent/shop.html
+++ b/TomcatServer/WebContent/shop.html
@@ -25,5 +25,14 @@
 		<button onclick="buy_item('3169', '5')">BUY BUY BUY ITEM</button>
 		
 		
+		<div id="basket">
+
+		<ul id=""></ul>
+		
+		
+		<button onclick="empty_basket()">BUY BUY BUY</button>
+		
+		</div>
+		
 	</body>
 </html>
