Added basket something

--- a/TomcatServer/WebContent/shop.html
+++ b/TomcatServer/WebContent/shop.html
@@ -17,7 +17,7 @@
 		</form>
 		
 		
-		<button onclick="add_to_basket('3169', '5')">HRELLOEW</button>
+		<button onclick="add_to_basket('3169', '5', '600', 'SOME ITEM')">HRELLOEW</button>
 		<button onclick="add_to_basket('3062', '10')">HRELLOEW</button>
 		<button onclick="add_to_basket('3177', '20')">HRELLOEW</button>
 		<button onclick="add_to_basket('3170', '15')">HRELLOEW</button>
@@ -27,8 +27,9 @@
 		
 		<div id="basket">
 
-		<ul id=""></ul>
+		<ul id="basketlist"></ul>
 		
+		<span><b>Total: </b></span> <span id="baskettotal">0</span><span><b> DKK</b></span>
 		
 		<button onclick="empty_basket()">BUY BUY BUY</button>
 		
