--- a/TomcatServer/WebContent/kontakt.html
+++ b/TomcatServer/WebContent/kontakt.html
@@ -24,7 +24,7 @@
 
 			</div>
 			<ul id="nav">
-				<li id="current"><a href="index.html" class="first">Forside</a></li>
+				<li id="current"><a href="index.html" class="first">Køb Gøgl</a></li>
 				<li><a href="cykler.html">Ethjulede cykler</a></li>
 				<li><a href="diablo.html">Djævlespil</a></li>
 				<li><a href="sminke.html">Ansigtsmaling</a></li>
