--- a/TomcatServer/WebContent/index.html
+++ b/TomcatServer/WebContent/index.html
@@ -1,46 +1,80 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<!-- Import af google font!-->
-	<link href='http://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
+<!-- Import af google font!-->
+<link href='http://fonts.googleapis.com/css?family=Frijole'
+	rel='stylesheet' type='text/css'>
 
-	<title>Gøglershop A.M.B.A</title>
+<script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
+<script type="text/javascript" src="js/template.js"></script>
+<script type="text/javascript" src="js/login.js"></script>
+<script type="text/javascript" src="js/basket.js"></script>
+<script type="text/javascript" src="js/shopService.js"></script>
+
+
+
+<title>Gøglershop A.M.B.A</title>
 </head>
 <body>
 	<div id="uberwrapper">
-	<div id="wrapper">
-		<div id="menu-wrapper">
+		<div id="wrapper">
+			<div id="menu-wrapper">
 
-			<div id="banner">
-				<a href="index.html">
-					<img src="images/banner.png" alt="banner" width="1182">
-				</a>
+				<div id="banner">
+					<a href="index.html"> <img src="images/banner.png" alt="banner"
+						width="1182">
+					</a>
+
+
+				</div>
+				<ul id="nav">
+					<li id="current"><a href="index.html" class="first">Køb Gøgl</a></li>
+					<li><a href="cykler.html">Ethjulede cykler</a></li>
+					<li><a href="diablo.html">Djævlespil</a></li>
+					<li><a href="sminke.html">Ansigtsmaling</a></li>
+					<li><a href="omos.html">Om os</a></li>
+					<li><a href="kontakt.html" class="last">Kontakt</a></li>
+				</ul>
+			</div>
+			<div id="content">
+
+
+				<form action="#" method="post">
+					<input type="text" name="username" value="" id="username">
+					<input type="password" name="password" value="" id="password">
+					<input type="button" name="login" value="Login" id="login">
+					<input type="button" name="create" value="Create new user"
+						id="create"> <label id="loginResponse"></label>
+				</form>
+
+
+				<table id="itemTableBody"></table>
+
+				<div id="basket">
+
+					<ul id="basketlist"></ul>
+
+					<span><b>Total: </b></span> <span id="baskettotal">0</span><span><b>
+							DKK</b></span>
+
+					<button onclick="empty_basket()">BUY BUY BUY</button>
+
+				</div>
+
+
 
 
 			</div>
-			<ul id="nav">
-				<li id="current"><a href="index.html" class="first">Forside</a></li>
-				<li><a href="cykler.html">Ethjulede cykler</a></li>
-				<li><a href="diablo.html">Djævlespil</a></li>
-				<li><a href="sminke.html">Ansigtsmaling</a></li>
-				<li><a href="omos.html">Om os</a></li>
-				<li><a href="kontakt.html" class="last">Kontakt</a></li>
-			</ul> 
+
 		</div>
-		<div id="content">
-			<img src="images/forside-billede.jpg" alt="This is two gøglers looking up an moneys ass!">
+		<div id="footer">
 
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut pellentesque orci. Aliquam condimentum elit eget nisl ornare tristique. Duis ac libero a augue varius pulvinar. Quisque ornare nisl posuere rutrum consequat. Proin faucibus in libero id dapibus. Aliquam ornare volutpat felis, sed congue eros mattis id. Vestibulum eleifend augue nec vestibulum euismod. Mauris a tortor interdum, vulputate nisi eu, viverra nulla. Nunc eu euismod urna, non euismod dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin posuere ante sed mauris hendrerit dignissim. Integer lacinia nisi et velit mattis ultricies. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vehicula pretium ante, in pretium diam dignissim at.
-		</div>
-
-	</div>
-			<div id="footer">
-
-			Copyright Dansk <span class="strangetext">G$glerforening</span> 1992-2003
+			Copyright Dansk <span class="strangetext">G$glerforening</span>
+			1992-2003
 
 		</div>
 	</div>
