--- a/TomcatServer/WebContent/shop.html
+++ b/TomcatServer/WebContent/shop.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>G$glershop</title>
-		<script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
-		<script type="text/javascript" src="js/template.js"></script>
-		<script type="text/javascript" src="js/login.js"></script>
-		<script type="text/javascript" src="js/basket.js"></script>
-	</head>
-	<body>
-		<form action="#" method="post">
-			<input type="text" name="username" value="" id="username">
-			<input type="password" name="password" value="" id="password">
-			<input type="button" name="login" value="Login" id="login">
-			<input type="button" name="create" value="Create new user" id="create">
-			<label id="loginResponse"></label>
-		</form>
-		
-		
-		<button onclick="add_to_basket('3169', '5', '600', 'SOME ITEM')">HRELLOEW</button>
-		<button onclick="add_to_basket('3062', '10')">HRELLOEW</button>
-		<button onclick="add_to_basket('3177', '20')">HRELLOEW</button>
-		<button onclick="add_to_basket('3170', '15')">HRELLOEW</button>
-		<button onclick="empty_basket()">BUY BUY BUY</button>
-		<button onclick="buy_item('3169', '5')">BUY BUY BUY ITEM</button>
-		
-		
-		<div id="basket">
+<head>
+<title>G$glershop</title>
+<script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
+<script type="text/javascript" src="js/template.js"></script>
+<script type="text/javascript" src="js/login.js"></script>
+<script type="text/javascript" src="js/basket.js"></script>
+<script type="text/javascript" src="js/shopService.js"></script>
+
+</head>
+<body>
+	<form action="#" method="post">
+		<input type="text" name="username" value="" id="username"> <input
+			type="password" name="password" value="" id="password"> <input
+			type="button" name="login" value="Login" id="login"> <input
+			type="button" name="create" value="Create new user" id="create">
+		<label id="loginResponse"></label>
+	</form>
+
+
+	<table id="itemTableBody"></table>
+
+	<div id="basket">
+
+		<h1>Indkøbskurv</h1>
 
 		<ul id="basketlist"></ul>
-		
-		<span><b>Total: </b></span> <span id="baskettotal">0</span><span><b> DKK</b></span>
-		
+
+		<span><b>Total: </b></span> <span id="baskettotal">0</span><span><b>
+				Jyske Dollars</b></span>
+
 		<button onclick="empty_basket()">BUY BUY BUY</button>
-		
-		</div>
-		
-	</body>
+
+	</div>
+
+</body>
 </html>
