--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 			</div>
 			<ul id="nav">
-				<li id="current"><a href="index.html" class="first">Forside</a></li>
+				<li id="current"><a href="index.html" class="first">Køb Gøgl</a></li>
 				<li><a href="cykler.html">Ethjulede cykler</a></li>
 				<li><a href="diablo.html">Djævlespil</a></li>
 				<li><a href="sminke.html">Ansigtsmaling</a></li>
@@ -32,7 +32,7 @@
 			</ul> 
 		</div>
 		<div id="content">
-			<img src="images/forside-billede.jpg" alt="This is two gøglers looking up an moneys ass!">
+			<img src="images/Køb Gøgl-billede.jpg" alt="This is two gøglers looking up an moneys ass!">
 
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut pellentesque orci. Aliquam condimentum elit eget nisl ornare tristique. Duis ac libero a augue varius pulvinar. Quisque ornare nisl posuere rutrum consequat. Proin faucibus in libero id dapibus. Aliquam ornare volutpat felis, sed congue eros mattis id. Vestibulum eleifend augue nec vestibulum euismod. Mauris a tortor interdum, vulputate nisi eu, viverra nulla. Nunc eu euismod urna, non euismod dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin posuere ante sed mauris hendrerit dignissim. Integer lacinia nisi et velit mattis ultricies. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vehicula pretium ante, in pretium diam dignissim at.
 		</div>
