Rating almost done

--- a/TomcatServer/WebContent/testRating.html
+++ b/TomcatServer/WebContent/testRating.html
@@ -16,5 +16,7 @@
 <span onclick="rate('3167', 4)" class="star rate4"></span>
 <span onclick="rate('3167', 5)" class="star rate5"></span>
 </div>
+<span>The current rating is: <</span>
+
 </body>
 </html>
