--- a/TomcatServer/WebContent/index.html
+++ b/TomcatServer/WebContent/index.html
@@ -14,6 +14,9 @@
 <script type="text/javascript" src="js/login.js"></script>
 <script type="text/javascript" src="js/basket.js"></script>
 <script type="text/javascript" src="js/shopService.js"></script>
+<script type="text/javascript" src="js/rating.js"></script>
+
+
 
 
 
