Integrated the searching into index.html. Might need some css

--- a/TomcatServer/WebContent/index.html
+++ b/TomcatServer/WebContent/index.html
@@ -13,7 +13,8 @@
 <script type="text/javascript" src="js/template.js"></script>
 <script type="text/javascript" src="js/login.js"></script>
 <script type="text/javascript" src="js/basket.js"></script>
-<script type="text/javascript" src="js/shopService.js"></script>
+<!--<script type="text/javascript" src="js/shopService.js"></script>-->
+<script type="text/javascript" src="js/search.js"></script>
 <script type="text/javascript" src="js/rating.js"></script>
 
 
@@ -54,6 +55,8 @@
 						id="create"> <label id="loginResponse"></label>
 				</form>
 
+				<input type="text" id="query">
+				<input type="button" value="Søg" id="update">
 
 				<table id="itemTableBody"></table>
 
