Chat partially added

--- a/TomcatServer/WebContent/index.html
+++ b/TomcatServer/WebContent/index.html
@@ -14,8 +14,10 @@
 <script type="text/javascript" src="js/login.js"></script>
 <script type="text/javascript" src="js/basket.js"></script>
 <!--<script type="text/javascript" src="js/shopService.js"></script>-->
+<script type="text/javascript" src="js/customerchat.js"></script>
 <script type="text/javascript" src="js/search.js"></script>
 <script type="text/javascript" src="js/rating.js"></script>
+
 
 
 
@@ -57,7 +59,9 @@
 
 				<input type="text" id="query">
 				<input type="button" value="Søg" id="update">
-
+				
+				<div id="chatlink"></div>
+				
 				<table id="itemTableBody"></table>
 
 				<div id="basket">
