--- a/TomcatServer/WebContent/admin/admin.xhtml
+++ b/TomcatServer/WebContent/admin/admin.xhtml
@@ -6,6 +6,10 @@
 	xmlns:h="http://java.sun.com/jsf/html">
 <head>
 <link rel="stylesheet" type="text/css" href="../css/backend.css" />
+<script type="text/javascript" src="../js/jquery-2.1.0.min.js"></script>
+<script type="text/javascript" src="../js/employeechat.js"></script>
+
+
 <title>Admin panel</title>
 </head>
 <body>
